# mQsim

./: CMakeLists.txt  CMakeLists.txt~  Makefile  NaISpectrum.C  README.md  currentEvent.rndm  detsim.cc  effSim.sh  fluxes.root  mQsim.cc  vis.mac
include/: DetectorConstruction.hh  DetectorConstructionDet.hh  DetectorHit.hh  DetectorSD.hh  EventAction.hh  MCPMinus.hh  PMTHit.hh  PMTSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
src/: DetectorConstruction.cc  DetectorConstructionDet.cc  DetectorConstructionDet2.cc  DetectorConstructionDet3.cc  DetectorHit.cc  DetectorSD.cc  EventAction.cc  MCPMinus.cc  PMTHit.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
